use bootstrap sass helper function to ensure contrast between text and bg color

--- a/CSS/scss/range-input.scss
+++ b/CSS/scss/range-input.scss
@@ -119,6 +119,7 @@ $radius: .25rem;
 	.irs-single,
 	.irs-slider {
 	    background: $color;
+	    color: color-yiq($color);
 	}
 
 	.irs-slider {
